// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.updateArtifacts() catches write error 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "Podfile.lock",
      "stderr": "not found",
    },
  },
]
`;

exports[`.updateArtifacts() catches write error 2`] = `Array []`;

exports[`.updateArtifacts() dynamically selects Docker image tag 1`] = `
Array [
  Object {
    "cmd": "docker ps --filter label=renovate_child -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker pull renovate/cocoapods:1.2.4",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_cocoapods -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_cocoapods --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/cache\\":\\"/tmp/cache\\" -e CP_HOME_DIR -w \\"/tmp/github/some/repo\\" renovate/cocoapods:1.2.4 bash -l -c \\"pod install\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CP_HOME_DIR": "/tmp/cache/others/cocoapods",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() falls back to the \`latest\` Docker image tag 1`] = `
Array [
  Object {
    "cmd": "docker ps --filter label=renovate_child -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker pull renovate/cocoapods:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_cocoapods -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_cocoapods --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/cache\\":\\"/tmp/cache\\" -e CP_HOME_DIR -w \\"/tmp/github/some/repo\\" renovate/cocoapods:latest bash -l -c \\"pod install\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CP_HOME_DIR": "/tmp/cache/others/cocoapods",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns null for invalid local directory 1`] = `Array []`;

exports[`.updateArtifacts() returns null if no Podfile.lock found 1`] = `Array []`;

exports[`.updateArtifacts() returns null if no updatedDeps were provided 1`] = `Array []`;

exports[`.updateArtifacts() returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "pod install",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CP_HOME_DIR": "/tmp/cache/others/cocoapods",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns null if updatedDeps is empty 1`] = `Array []`;

exports[`.updateArtifacts() returns pod exec error 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "Podfile.lock",
      "stderr": "exec exception",
    },
  },
]
`;

exports[`.updateArtifacts() returns pod exec error 2`] = `
Array [
  Object {
    "cmd": "pod install",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CP_HOME_DIR": "/tmp/cache/others/cocoapods",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns updated Podfile 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Podfile",
      "name": "Podfile.lock",
    },
  },
]
`;

exports[`.updateArtifacts() returns updated Podfile 2`] = `
Array [
  Object {
    "cmd": "docker ps --filter label=renovate_child -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker pull renovate/cocoapods",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_cocoapods -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_cocoapods --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/cache\\":\\"/tmp/cache\\" -e CP_HOME_DIR -w \\"/tmp/github/some/repo\\" renovate/cocoapods bash -l -c \\"gem install cocoapods-acknowledgements && pod install\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CP_HOME_DIR": "/tmp/cache/others/cocoapods",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns updated Podfile and Pods files 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Podfile",
      "name": "Podfile.lock",
    },
  },
  Object {
    "file": Object {
      "contents": undefined,
      "name": "Pods/Manifest.lock",
    },
  },
  Object {
    "file": Object {
      "contents": undefined,
      "name": "Pods/New",
    },
  },
  Object {
    "file": Object {
      "contents": "Pods/Deleted",
      "name": "|delete|",
    },
  },
]
`;

exports[`.updateArtifacts() returns updated Podfile and Pods files 2`] = `
Array [
  Object {
    "cmd": "docker ps --filter label=renovate_child -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_cocoapods -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_cocoapods --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/cache\\":\\"/tmp/cache\\" -e CP_HOME_DIR -w \\"/tmp/github/some/repo\\" renovate/cocoapods bash -l -c \\"pod install\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CP_HOME_DIR": "/tmp/cache/others/cocoapods",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
